css/styles.css
/* ... */
#name-left-xs { font-family: 'Courier New', Courier, monospace; text-align: left; font-size: 0.8em; }
#name-left-xs-portfolio { font-family: 'Courier New', Courier, monospace; text-align: left; font-size: 0.94em; vertical-align: 1px; }
#name-right-xs-portfolio { text-align: right; font-weight: bold; background: -webkit-linear-gradient(323deg, #09009f, #00dc80 90%); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-size: 0.8em; }
#name-right-xs { text-align: right; font-weight: bold; background: -webkit-linear-gradient(323deg, #09009f, #00dc80 90%); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-size: 0.8em; }
#name-left-mobile { font-family: 'Courier New', Courier, monospace; text-align: left; font-size: 3.1em; }
#name-right-mobile { text-align: right; font-weight: bold; background: -webkit-linear-gradient(323deg, #09009f, #00dc80 90%); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-size: 3em; }
#subtitle-left-xs { font-family: 'Courier New', Courier, monospace; text-align: left; font-size: 1em; }
#subtitle-right-xs { text-align: right; font-weight: bold; background: -webkit-linear-gradient(323deg, #09009f, #00dc80 90%); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-size: 1em; }
#subtitle-bottom-left-xs { font-family: 'Courier New', Courier, monospace; text-align: left; font-size: 1em; }
#subtitle-bottom-right-xs { text-align: right; font-weight: bold; background: -webkit-linear-gradient(323deg, #09009f, #00dc80 90%); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-size: 1em; }
.intro-link { color: white; text-decoration: underline; }
#photo-text { font-size: 10px; text-align: left; }
#code-icon { font-size: 32px; margin-bottom: 28px; color: #60c49c; }
.youtube-video { aspect-ratio: 16 / 9; width: 100%; margin: 0; position: absolute; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%); }
#subtitle-upper-left { text-align: left; }
#subtitle-upper-right { text-align: right; }
#subtitle-lower-left { text-align: left; }
#subtitle-lower-right { text-align: right; }
#mobile-title-row { margin-bottom: 10px; }
#mobile-name-left { text-align: center; }
#mobile-name-right { text-align: center; }
#default-nav { display: table; margin: 0 auto; }
#mobile-name-portfolio { text-align: center; margin-bottom: 0px; margin-top: 0px; display: block; cursor: pointer; }
#about-portfolio { background: #fbfbfb; }
p.text-intro-portfolio { font-size: 22px; text-align: justify; color: #848789; }
p.text-intro-smaller-portfolio { font-size: 16px; text-align: justify; color: #848789; }
.portfolio-link { color: #848789; text-decoration: underline; }
.portfolio-subtitle-link { text-decoration: underline; }
.dev-font {  font-family: 'Courier New', Courier, monospace; }
.music-font { font-weight: bold; background: -webkit-linear-gradient(283deg, #09009f, #00dc80 90%); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
#rhythms-header { font-size: 6em; text-align: center; margin-bottom: 0px; margin-top: 0px; }
#days-header { font-size: 5em; text-align: center; margin-bottom: 0px; margin-top: 0px; }
#censr-header { font-size: 6em; text-align: center; margin-bottom: 0px; margin-top: 0px; }
#rhythms-subtitle { font-size: 1.5em; text-align: center; font-weight: 100; letter-spacing: 2px; margin-top: 25px; margin-bottom: 45px; }
#censr-subtitle { font-size: 1.5em; text-align: center; font-weight: 100; letter-spacing: 2px; margin-top: 25px; margin-bottom: 45px; }
.portfolio-video { aspect-ratio: 16 / 9; width: 100%; }
.center { text-align: center; }
.clickable-img { cursor: pointer; }
.link-no-underline:hover, .expand:hover { text-decoration: none; }
.link-no-underline:active, .expand:active { color: #64c29e; text-decoration: none; }
.link-no-underline:focus, .expand:focus { color: #64c29e; text-decoration: none; }
.portfolio-img { display: block; margin-top: 30px; margin-bottom: 30px; margin-left: auto; margin-right: auto; width: 100%; height: auto; }
.portfolio-bottom-img { display: block; margin-top: 60px; margin-bottom: 52px; margin-left: auto; margin-right: auto; width: 100%; height: auto; }
.intro-link:active, .portfolio-link:active { color: #64c29e; }
.intro-link:focus, .portfolio-link:focus { color: #64c29e; }
#portfolio-link-special { color: #64c29e; }
.stars { color: #ffc700; }
.review-title { color: #282f35; font-weight: bold; }
#portfolio-blurb-link { text-decoration: underline; }
.instagram-media { margin: 0 auto!important; }
.portfolio-ul { font-size: 16px; text-align: left; color: #848789; font-weight: 300; word-spacing: 2px; line-height: 1.8em; margin-top: 25px; }
#prc-mobile { max-height: 460px; width: auto; }
#arcade-img { height: 400px; width: auto; margin-top: 40px; }
#fathom-img { margin-top: 30px; }
a, a:active, a:focus { outline: none; }

